--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,193 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Shard</title>
-        <meta name="description" content="">
-        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Shard</title>
+    <meta name="description" content="">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <style>
+      * {
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+        -khtml-user-select: none; /* Konqueror HTML */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+        user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+      }
+      body {
+      	background: #2c3e50;
+      }
+      .button {
+        width: 80px;
+        height: 80px;
+        padding: auto;
+        margin: 10px;
+        font-size: 32px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        color: #fff;
+        border: none;
+        border-radius: 15px;
+      }
+      .button.green {
+        background-color: #4CAF50;
+        box-shadow: 0 9px #999;
+      }
+      .button.orange {
+        background-color: #f77c2a;
+        box-shadow: 0 9px #db5a04;
+      }
+      .controller {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 3%;
+      }
+      .leftPanel {
+        float: left;
+        padding: 0;
+        margin: 0;
+        width: 25%;
+        height: 100%;
+      }
+      .centerPanel {
+        float: left;
+        padding: 0;
+        margin: 0;
+        width: 50%;
+        height: 100%;
+      }
+      .rightPanel {
+        float: left;
+        padding: 0;
+        margin: 0;
+        width: 25%;
+        height: 100%;
+      }
+      #up {
+        position: fixed;
+        bottom: 150px;
+        left: 50px;
+      }
+      #down {
+        position: fixed;
+        bottom: 50px;
+        left: 50px;
+      }
+      #left {
+        position: fixed;
+        bottom: 50px;
+        right: 150px;
+      }
+      #right {
+        position: fixed;
+        bottom: 50px;
+        right: 50px;
+      }
+      #lights {
+      	position: fixed;
+        bottom: 150px;
+        right: 100px;
+      }
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upg$
+<![endif]-->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 
-        <link rel="stylesheet" href="/main.css">
-   </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upg$
-        <![endif]-->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <a href="#" class="btn_yellow">Yellow Button</a>
-
-        <form action="/" method="post">
-                Turn:<br>
-                        <input name="turn" type="text"><br>
-                Motor:<br>
-                        <input name="motor" type="text"><br>
-                Run_Mode:<br>
-                        <input name="run_mode" type="text"><br>
-                <input value="Submit" type="submit">
-        </form>
-    </body>
+    <div class="controller">
+      <div class="leftPanel">
+        <button class="button green" id="up" ontouchstart="upPress()" ontouchend="upRelease()">⇧</button>
+        <button class="button green" id="down" ontouchstart="downPress()" ontouchend="downRelease()">⇩</button>
+      </div>
+      <div class="centerPanel">
+        <button class="button orange" id="lights" ontouchstart="lightsPress()" ontouchend="lightsRelease()">💡</button>
+      </div>
+      <div class="rightPanel">
+        <button class="button green" id="left" ontouchstart="leftPress()" ontouchend="leftRelease()">⇦</button>
+        <button class="button green" id="right" ontouchstart="rightPress()" ontouchend="rightRelease()">⇨</button>
+      </div>
+    </div>
+    <script>
+      function upPress() {
+        $.post("/", {motor: "1"});
+        document.getElementById("up").style.color = "grey";
+        document.getElementById("up").style.backgroundColor = "#3e8e41";
+        document.getElementById("up").style.boxShadow = "0 5px #666";
+        document.getElementById("up").style.transform = "translateY(4px)";
+      }
+      function upRelease() {
+        $.post("/", {motor: "0"});
+        document.getElementById("up").style.color = "white";
+        document.getElementById("up").style.backgroundColor = "#4CAF50";
+        document.getElementById("up").style.boxShadow = "0 9px #999";
+        document.getElementById("up").style.transform = "translateY(0px)";
+      }
+      function downPress() {
+        $.post("/", {motor: "-1"});
+        document.getElementById("down").style.color = "grey";
+        document.getElementById("down").style.backgroundColor = "#3e8e41";
+        document.getElementById("down").style.boxShadow = "0 5px #666";
+        document.getElementById("down").style.transform = "translateY(4px)";
+      }
+      function downRelease() {
+        $.post("/", {motor: "0"});
+        document.getElementById("down").style.color = "white";
+        document.getElementById("down").style.backgroundColor = "#4CAF50";
+        document.getElementById("down").style.boxShadow = "0 9px #999";
+        document.getElementById("down").style.transform = "translateY(0px)";
+      }
+      function leftPress() {
+        $.post("/", {turn: "-1"});
+        document.getElementById("left").style.color = "grey";
+        document.getElementById("left").style.backgroundColor = "#3e8e41";
+        document.getElementById("left").style.boxShadow = "0 5px #666";
+        document.getElementById("left").style.transform = "translateY(4px)";
+      }
+      function leftRelease() {
+        $.post("/", {turn: "0"});
+        document.getElementById("left").style.color = "white";
+        document.getElementById("left").style.backgroundColor = "#4CAF50";
+        document.getElementById("left").style.boxShadow = "0 9px #999";
+        document.getElementById("left").style.transform = "translateY(0px)";
+      }
+      function rightPress() {
+        $.post("/", {turn: "1"});
+        document.getElementById("right").style.color = "grey";
+        document.getElementById("right").style.backgroundColor = "#3e8e41";
+        document.getElementById("right").style.boxShadow = "0 5px #666";
+        document.getElementById("right").style.transform = "translateY(4px)";
+      }
+      function rightRelease() {
+        $.post("/", {turn: "0"});
+        document.getElementById("right").style.color = "white";
+        document.getElementById("right").style.backgroundColor = "#4CAF50";
+        document.getElementById("right").style.boxShadow = "0 9px #999";
+        document.getElementById("right").style.transform = "translateY(0px)";
+      }
+      function lightsPress() {
+        $.post("/", {lights: "1"});
+        document.getElementById("lightsOn").style.color = "grey";
+        document.getElementById("lightsOn").style.backgroundColor = "#dd6c21";
+        document.getElementById("lightsOn").style.boxShadow = "0 9px #999";
+        document.getElementById("lightsOn").style.transform = "translateY(0px)";
+      }
+      function lightsRelease() {
+        $.post("/", {lights: "0"});
+        document.getElementById("lightsOn").style.color = "white";
+        document.getElementById("lightsOn").style.backgroundColor = "#f77c2a";
+        document.getElementById("lightsOn").style.boxShadow = "0 9px #999";
+        document.getElementById("lightsOn").style.transform = "translateY(0px)";
+      }
+    </script>
+  </body>
 </html>
