--- a/templates/index.html
+++ b/templates/index.html
@@ -96,103 +96,102 @@
         right: 100px;
       }
     </style>
-    <script src="https://raw.githubusercontent.com/h5bp/html5-boilerplate/master/dist/js/vendor/modernizr-3.5.0.min.js"></script>
+    <!--<script src="https://raw.githubusercontent.com/h5bp/html5-boilerplate/master/dist/js/vendor/modernizr-3.5.0.min.js"></script>-->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--<script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>-->
+    <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
   </head>
   <body onload="loadSounds();">
     <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upg$
 <![endif]-->
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-    <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
-    <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
-    
     <script>
-      var click = new Audio("https://raw.githubusercontent.com/Quantum-Helix/Shard/master/templates/Assets/Button%20Click%201.wav");
-      var unclick = new Audio("https://raw.githubusercontent.com/Quantum-Helix/Shard/master/templates/Assets/Button%20Unclick%201.wav");
-
+      function loadSounds() {
+        createjs.Sound.registerSound("https://raw.githubusercontent.com/Quantum-Helix/Shard/master/templates/Assets/Button%20Click%201.ogg", "click");
+        createjs.Sound.registerSound("https://raw.githubusercontent.com/Quantum-Helix/Shard/master/templates/Assets/Button%20Unclick%201.ogg", "unclick");
+      }
       function upPress() {
         $.post("/", {motor: "1"});
         document.getElementById("up").style.backgroundColor = "#3e8e41";
         document.getElementById("up").style.boxShadow = "0 5px #666";
         document.getElementById("up").style.transform = "translateY(4px)";
-        click.play();
+        createjs.Sound.play("click")
       }
       function upRelease() {
         $.post("/", {motor: "0"});
         document.getElementById("up").style.backgroundColor = "#4CAF50";
         document.getElementById("up").style.boxShadow = "0 9px #999";
         document.getElementById("up").style.transform = "translateY(0px)";
-        unclick.play();
+        createjs.Sound.play("unclick")
       }
       function downPress() {
         $.post("/", {motor: "-1"});
         document.getElementById("down").style.backgroundColor = "#3e8e41";
         document.getElementById("down").style.boxShadow = "0 5px #666";
         document.getElementById("down").style.transform = "translateY(4px)";
-        click.play();
+        createjs.Sound.play("click")
       }
       function downRelease() {
         $.post("/", {motor: "0"});
         document.getElementById("down").style.backgroundColor = "#4CAF50";
         document.getElementById("down").style.boxShadow = "0 9px #999";
         document.getElementById("down").style.transform = "translateY(0px)";
-        unclick.play();
+        createjs.Sound.play("unclick")
       }
       function leftPress() {
         $.post("/", {turn: "-1"});
         document.getElementById("left").style.backgroundColor = "#3e8e41";
         document.getElementById("left").style.boxShadow = "0 5px #666";
         document.getElementById("left").style.transform = "translateY(4px)";
-        click.play();
+        createjs.Sound.play("click")
       }
       function leftRelease() {
         $.post("/", {turn: "0"});
         document.getElementById("left").style.backgroundColor = "#4CAF50";
         document.getElementById("left").style.boxShadow = "0 9px #999";
         document.getElementById("left").style.transform = "translateY(0px)";
-        unclick.play();
+        createjs.Sound.play("unclick")
       }
       function rightPress() {
         $.post("/", {turn: "1"});
         document.getElementById("right").style.backgroundColor = "#3e8e41";
         document.getElementById("right").style.boxShadow = "0 5px #666";
         document.getElementById("right").style.transform = "translateY(4px)";
-        click.play();
+        createjs.Sound.play("click")
       }
       function rightRelease() {
         $.post("/", {turn: "0"});
         document.getElementById("right").style.backgroundColor = "#4CAF50";
         document.getElementById("right").style.boxShadow = "0 9px #999";
         document.getElementById("right").style.transform = "translateY(0px)";
-        unclick.play();
+        createjs.Sound.play("unclick")
       }
       function lightsPress() {
         $.post("/", {lights: "1"});
         document.getElementById("lights").style.backgroundColor = "#dd6c21";
         document.getElementById("lights").style.boxShadow = "0 5px #999";
         document.getElementById("lights").style.transform = "translateY(4px)";
-        click.play();
+        createjs.Sound.play("click")
       }
       function lightsRelease() {
         $.post("/", {lights: "0"});
         document.getElementById("lights").style.backgroundColor = "#f77c2a";
         document.getElementById("lights").style.boxShadow = "0 9px #db5a04";
         document.getElementById("lights").style.transform = "translateY(0px)";
-        unclick.play();
+        createjs.Sound.play("unclick")
       }
     </script>
     <div class="controller">
       <div class="leftPanel">
-        <button class="green" id="up" ontouchstart="upPress()" ontouchend="upRelease()">⇧</button>
-        <button class="green" id="down" ontouchstart="downPress()" ontouchend="downRelease()">⇩</button>
+        <button class="green" id="up" ontouchstart="upPress();" ontouchend="upRelease();">⇧</button>
+        <button class="green" id="down" ontouchstart="downPress();" ontouchend="downRelease();">⇩</button>
       </div>
       <div class="centerPanel">
-        <button class="orange" id="lights" ontouchstart="lightsPress()" ontouchend="lightsRelease()">💡</button>
+        <button class="orange" id="lights" onmousedown="lightsPress();" onmouseup="lightsRelease();">💡</button>
       </div>
       <div class="rightPanel">
-        <button class="green" id="left" ontouchstart="leftPress()" ontouchend="leftRelease()">⇦</button>
-        <button class="green" id="right" ontouchstart="rightPress()" ontouchend="rightRelease()">⇨</button>
+        <button class="green" id="left" ontouchstart="leftPress();" ontouchend="leftRelease();">⇦</button>
+        <button class="green" id="right" ontouchstart="rightPress();" ontouchend="rightRelease();">⇨</button>
       </div>
     </div>
   </body>
