--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,7 @@
     </style>
     <!--<script src="https://raw.githubusercontent.com/h5bp/html5-boilerplate/master/dist/js/vendor/modernizr-3.5.0.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
     <!--<script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>-->
     <!--<script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>-->
   </head>
