--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
       </div>
       <div class="centerPanel">
         <button class="orange" id="lights" ontouchstart="lightsPress();" ontouchend="lightsRelease();">💡</button>
-	<a href="./?action=stream"> <img src="./?action=stream" border="0" width="100%"></a>
+	<a href="http://10.0.0.148:8080/?action=stream"> <img src="http://10.0.0.148:8080/?action=stream" border="0" width="100%"></a>
       </div>
       <div class="rightPanel">
         <button class="green" id="left" ontouchstart="leftPress();" ontouchend="leftRelease();">⇦</button>
